# SemanticFS

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default.yaml
native_core/: Cargo.toml
native_core/src/: lib.rs
scripts/: setup_startup_daemon.ps1
semanticfs/: __init__.py  chunker.py  cli.py  config.py  context.py  daemon.py  embedder.py  linker.py  onnx_embedder.py  router.py  store.py  trainer.py  vision.py  watcher.py
tests/: run_drive_stress_fast.py  test_context.py  test_embedder.py  test_linker.py  test_store.py  test_suite_100.py  test_suite_10000.py  test_suite_10000_real.py
