[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticfs"
version = "0.1.0"
description = "A temporal-associative semantic terminal file tool that replaces rigid folder hierarchies with context-aware, vector-based file retrieval."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Manoj"},
]

dependencies = [
    "watchdog>=4.0",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "psutil>=6.0",
    "pygetwindow>=0.0.9",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
train = [
    "datasets>=2.19",
    "accelerate>=0.30",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sfind = "semanticfs.cli:main"
semanticfs = "semanticfs.daemon:main"

[tool.setuptools.packages.find]
include = ["semanticfs*"]
