[package]
name = "libsemanticfs"
version = "0.1.0"
edition = "2021"
authors = ["SemanticFS Team"]
description = "Native Rust Core Vector Search Engine & File System Event Watcher"

[lib]
name = "libsemanticfs"
crate-type = ["cdylib", "rlib"]

[dependencies]
notify = "6.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
walkdir = "2.4"
tokio = { version = "1.35", features = ["full"] }
